# examen-S2G

./: .gitignore  README.md  docker-compose.yaml
backend/: config.py  load_stations.py  main.py  pyproject.toml
backend/api/: status.py
backend/api/v1/: __init__.py
backend/api/v1/charge_station/: __init__.py  list.py
backend/api/v1/token/: __init__.py  refresh.py
backend/api/v1/user/: __init__.py  login.py
backend/models/: annotated.py  charge_station.py  response.py
backend/repository/: charge_stations.py  db.py  users.py
backend/repository/schemas/: __init__.py  charge_station.py  login.py
backend/utils/: fake_data.py  token.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/info/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/sign-up/: page.tsx
frontend/src/components/: charge_station_form.tsx  charge_station_list.tsx  dot_status.tsx  log_out_button.tsx  login_form.tsx  map.tsx  register_form.tsx  token_info.tsx
frontend/src/components/icons/: charger.tsx  key.tsx  letter.tsx
frontend/src/server_actions/: auth.ts  charge_stations.ts  cookies.ts  status.ts
frontend/src/stores/: charge_stations.ts
frontend/src/types/: charge_stations.ts
frontend/src/utils/: server_actions.ts  store.ts  useAuth.ts
